fix(kanban): rearrange swimlanes z-index

--- a/app/styles/dependencies/helpers.scss
+++ b/app/styles/dependencies/helpers.scss
@@ -9,6 +9,7 @@ $negative-layer: -1;
 $first-layer: 2;
 $second-layer: 3;
 $third-layer: 4;
+$fourth-layer: 5;
 $layout-layer: 9; /* Do not use this except for the main layout */
 $layout-floating-layer: 10;
 $loading-layer: 98;
